force-app/main/default/objects/InfoCouleur__c/InfoCouleur__c.object-meta.xml
<CustomObject>
    <label>Info Couleur</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Info Couleur</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>