force-app/main/default/objects/InfoCouleur__c/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sont &quot;Actives&quot; les info couleur défilant deans le carousel</description>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>