force-app/main/default/objects/InfoCouleur__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(Date_de_validit__c &gt;=  TODAY()    , true, false)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>