force-app/main/default/objects/InfoCouleur__c/fields/Couleur__c.field-meta.xml
<CustomField>
    <fullName>Couleur__c</fullName>
    <description>représente le type d&apos;Info Couleur</description>
    <label>Couleur</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bleue</fullName>
            </value>
            <value>
                <fullName>Rouge</fullName>
            </value>
            <value>
                <fullName>Violette</fullName>
            </value>
            <value>
                <fullName>Verte</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Bleu</fullName>
                <isActive>false</isActive>
                <label>Bleu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>