force-app/main/default/objects/InfoCouleur__c/fields/Date_de_validit__c.field-meta.xml
<CustomField>
    <fullName>Date_de_validit__c</fullName>
    <description>Permet de prédéfinir une période d&apos;affichage pour les Info Couleur</description>
    <label>Date de validité</label>
    <type>Date</type>
</CustomField>