force-app/main/default/objects/InfoCouleur__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>est le contenu de l&apos;Info Couleur</description>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>