force-app/main/default/objects/InfoCouleur__c/fields/imgColorSource__c.field-meta.xml
<CustomField>
    <fullName>imgColorSource__c</fullName>
    <formula>IF( ISPICKVAL(Couleur__c, &apos;Rouge&apos;) , $Label.SM_URL &amp; &apos;resource/SM_ImageR&apos;, 
IF( ISPICKVAL(Couleur__c, &apos;Verte&apos;)  , $Label.SM_URL &amp; &apos;resource/SM_ImageVert&apos;, 
IF( ISPICKVAL(Couleur__c, &apos;Violette&apos;)  , $Label.SM_URL &amp; &apos;resource/SM_ImageV&apos;, 
IF( ISPICKVAL(Couleur__c, &apos;Bleue&apos;) , $Label.SM_URL &amp; &apos;resource/SM_ImageB&apos;, 
IF( ISPICKVAL(Couleur__c, &apos;Orange&apos;) , $Label.SM_URL &amp; &apos;resource/SM_ImageO&apos;, 

$Label.SM_URL

)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>imgColorSource</label>
    <type>Text</type>
</CustomField>