force-app/main/default/objects/InfoCouleur__c/fields/Info_Url__c.field-meta.xml
<CustomField>
    <fullName>Info_Url__c</fullName>
    <formula>$Label.SM_URL &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Info Url</label>
    <type>Text</type>
</CustomField>