force-app/main/default/objects/InfoCouleur__c/fields/Nombre_de_vue__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_vue__c</fullName>
    <description>Permet de comptabiliser le nombre de vues</description>
    <label>Nombre de vues</label>
    <summaryForeignKey>Nombre_de_vue__c.Info_Couleur__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>