force-app/main/default/objects/InfoCouleur__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Couleur__c</columns>
    <columns>Active__c</columns>
    <columns>Date_de_validit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Archive__c</columns>
    <columns>Nombre_de_vue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Toutes les Infos Couleurs</label>
</ListView>