force-app/main/default/objects/InfoCouleur__c/listViews/Informations_de_couleur_inactives.listView-meta.xml
<ListView>
    <fullName>Informations_de_couleur_inactives</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Couleur__c</columns>
    <columns>Nombre_de_vue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Archive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Informations de couleurs à consulter</label>
</ListView>