force-app/main/default/objects/InfoCouleur__c/listViews/Toute_les_infos_Couleurs.listView-meta.xml
<ListView>
    <fullName>Toute_les_infos_Couleurs</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Couleur__c</columns>
    <columns>Active__c</columns>
    <columns>Date_de_validit__c</columns>
    <columns>Archive__c</columns>
    <columns>Nombre_de_vue__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les infos Couleurs</label>
</ListView>