force-app/main/default/objects/InfoCouleur__c/listViews/Toutes_les_Infos_Couleurs_Archivees.listView-meta.xml
<ListView>
    <fullName>Toutes_les_Infos_Couleurs_Archivees</fullName>
    <columns>NAME</columns>
    <columns>Couleur__c</columns>
    <columns>Active__c</columns>
    <columns>Date_de_validit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Nombre_de_vue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Toutes les Infos Couleurs Archivées</label>
    <sharedTo>
        <group>Admin_Metier_InfoCouleur</group>
    </sharedTo>
</ListView>